--- a/examples/whm-kitchen-sink/public/index.html
+++ b/examples/whm-kitchen-sink/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDS React App</title>
+    <title>WHM React App</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="/bundle.js"></script>
   </body>
 </html>
